puzzle1/2 Refactor , documentation update
